; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_linker.c_sys_kldfind.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_linker.c_sys_kldfind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32*, i32 }
%struct.kldfind_args = type { i32 }
%struct.TYPE_3__ = type { i32 }

@MAXPATHLEN = common dso_local global i32 0, align 4
@M_TEMP = common dso_local global i32 0, align 4
@M_WAITOK = common dso_local global i32 0, align 4
@kld_sx = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_kldfind(%struct.thread* %0, %struct.kldfind_args* %1) #0 {
  %3 = alloca %struct.thread*, align 8
  %4 = alloca %struct.kldfind_args*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %3, align 8
  store %struct.kldfind_args* %1, %struct.kldfind_args** %4, align 8
  %9 = load %struct.thread*, %struct.thread** %3, align 8
  %10 = getelementptr inbounds %struct.thread, %struct.thread* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  store i32 -1, i32* %12, align 4
  %13 = load i32, i32* @MAXPATHLEN, align 4
  %14 = load i32, i32* @M_TEMP, align 4
  %15 = load i32, i32* @M_WAITOK, align 4
  %16 = call i8* @malloc(i32 %13, i32 %14, i32 %15)
  store i8* %16, i8** %5, align 8
  %17 = load %struct.kldfind_args*, %struct.kldfind_args** %4, align 8
  %18 = getelementptr inbounds %struct.kldfind_args, %struct.kldfind_args* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i8*, i8** %5, align 8
  %21 = load i32, i32* @MAXPATHLEN, align 4
  %22 = call i32 @copyinstr(i32 %19, i8* %20, i32 %21, i32* null)
  store i32 %22, i32* %8, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %2
  br label %45

25:                                               ; preds = %2
  %26 = load i8*, i8** %5, align 8
  %27 = call i8* @linker_basename(i8* %26)
  store i8* %27, i8** %6, align 8
  %28 = call i32 @sx_xlock(i32* @kld_sx)
  %29 = load i8*, i8** %6, align 8
  %30 = call %struct.TYPE_3__* @linker_find_file_by_name(i8* %29)
  store %struct.TYPE_3__* %30, %struct.TYPE_3__** %7, align 8
  %31 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %32 = icmp ne %struct.TYPE_3__* %31, null
  br i1 %32, label %33, label %41

33:                                               ; preds = %25
  %34 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %35 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.thread*, %struct.thread** %3, align 8
  %38 = getelementptr inbounds %struct.thread, %struct.thread* %37, i32 0, i32 0
  %39 = load i32*, i32** %38, align 8
  %40 = getelementptr inbounds i32, i32* %39, i64 0
  store i32 %36, i32* %40, align 4
  br label %43

41:                                               ; preds = %25
  %42 = load i32, i32* @ENOENT, align 4
  store i32 %42, i32* %8, align 4
  br label %43

43:                                               ; preds = %41, %33
  %44 = call i32 @sx_xunlock(i32* @kld_sx)
  br label %45

45:                                               ; preds = %43, %24
  %46 = load i8*, i8** %5, align 8
  %47 = load i32, i32* @M_TEMP, align 4
  %48 = call i32 @free(i8* %46, i32 %47)
  %49 = load i32, i32* %8, align 4
  ret i32 %49
}

declare dso_local i8* @malloc(i32, i32, i32) #1

declare dso_local i32 @copyinstr(i32, i8*, i32, i32*) #1

declare dso_local i8* @linker_basename(i8*) #1

declare dso_local i32 @sx_xlock(i32*) #1

declare dso_local %struct.TYPE_3__* @linker_find_file_by_name(i8*) #1

declare dso_local i32 @sx_xunlock(i32*) #1

declare dso_local i32 @free(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
